--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- link stylesheet -->
-    <link rel="stylesheet" href="./style.css/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body class="bg-[#F0FDF4]">
     
@@ -64,7 +64,55 @@
                 <img src="./assets/hero-leaf2.png" alt="">
             </div>
          </section>
-     </header>
+    </header>
+
+
+
+    <!-- Main section -->
+    <main class="my-15">
+        <h1 class="text-center text-4xl font-bold my-4 mb-8">Choose Your Trees</h1>
+        <section class="flex w-11/12 mx-auto space-x-4">
+
+            <!-- categories section -->
+            <div class="w-1/6">
+                <h3 class="text-xl font-bold mb-4">Categories</h3>
+                <div id="categories-container">                    
+                </div>
+            </div>
+
+
+            <!-- all trees card section -->
+            <div id="all-trees-card-container" class="w-4/6  grid grid-cols-3 gap-4" >                
+            </div>
+
+
+            <!-- trees card section -->
+            <div id="trees-card-container" class="w-4/6 grid grid-cols-3 gap-4 hidden" >
+                <!-- <div class="bg-white p-4 rounded-xl space-y-2">
+                    <img src="./assets/" alt="" class="rounded-xl">
+                    <div class="w-11/12 h-[120px] bg-gray-300 rounded-xl"></div>
+                    <h1 class="text-lg font-bold">Mango Tree</h1>
+                    <p class="text-xs">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
+                    <div class="flex justify-between items-center">
+                        <button class="p-1 px-3 text-xs text-[#15803D] bg-[#DCFCE7] rounded-3xl">Fruit Trees</button>
+                        <p class="text-sm font-bold">৳500</p>
+                    </div>
+                    <button class="p-1 bg-[#15803D] text-sm text-white rounded-3xl w-full">Add to Cart</button>
+                </div>                 -->
+            </div>
+
+
+            <!-- your cart section -->
+            <div class="w-1/6 bg-white rounded-xl">
+                <h3 class="text-xl font-bold mb-4 pt-1 p-4">Your Cart</h3>                
+                <div id="your-cart-container">
+
+                </div>
+            </div>
+        </section>
+    </main>
+
+
 
 
 
@@ -90,17 +138,24 @@
     </section>
 
     <!-- Plant a Tree Today section -->
-    <section class="bg-[#166534]">
-        <div>
-            <h1>Plant a Tree Today</h1>
-            <div>
-                <input type="text" placeholder="Youn Name" class="input input-ghost bg-white" />
-                <input type="email" placeholder="Your Email Address" class="input input-ghost bg-white" />
+    <section class="bg-[#166534] py-14">
+        <div class="mx-auto text-center space-y-6">
+            <h1 class="text-white text-3xl font-bold">Plant a Tree Today</h1>
+            <div class="bg-[#15803D] rounded-xl p-6 space-y-3 inline-block">
+                <input type="text" placeholder="Youn Name" class="input input-ghost bg-white" /> <br>
+                <input type="email" placeholder="Your Email Address" class="input input-ghost bg-white" /> <br>
+                <input type="email" placeholder="Number of Trees" class="input input-ghost bg-white " />
+                <button class="btn bg-[#FACC15] text-[#15803D] rounded-4xl border-none w-full">Donate Now</button>
             </div>
         </div>
     </section>
 
+    <!-- footer section -->
+     <footer>
+        <div class="text-center text-white bg-[#14532D] p-8"><p>© 2025 Green Earth. All Rights Reserved.</p></div>
+     </footer>
+
     <!-- js file link -->
-    <script src="./script/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
