--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
 
         <!-- header section banner -->
          <section class="bg-[#CFF0DC] flex justify-around items-center">
-            <div>
-                <img src="./assets/hero-leaf1.png" alt="">
-            </div>
-            <div class="text-center space-y-4">
-                <h1 class="text-3xl font-bold">Plant a Tree, Grow a Future</h1>
-                <p class="text-sm">Join our mission to plant 1 million trees and make the Earth greener for future generations.</p>
-                <button class="btn bg-[#FACC15] text-[#15803D] rounded-4xl">Get Involved</button>
-            </div>
-            <div>
-                <img src="./assets/hero-leaf2.png" alt="">
+            <div class="w-11/12 mx-auto my-4 sm:mt-0 flex justify-around items-center">
+                <div>
+                <img src="./assets/hero-leaf1.png" alt="" class="hidden sm:block">
+                </div>
+                <div class="text-center space-y-4">
+                    <h1 class="text-3xl font-bold">Plant a Tree, Grow a Future</h1>
+                    <p class="text-sm">Join our mission to plant 1 million trees and make the Earth greener for future generations.</p>
+                    <button class="btn bg-[#FACC15] text-[#15803D] rounded-4xl">Get Involved</button>
+                </div>
+                <div>
+                    <img src="./assets/hero-leaf2.png" alt="" class="hidden sm:block">
+                </div>
             </div>
          </section>
     </header>
@@ -71,45 +73,52 @@
     <!-- Main section -->
     <main class="my-15">
         <h1 class="text-center text-4xl font-bold my-4 mb-8">Choose Your Trees</h1>
-        <section class="flex w-11/12 mx-auto space-x-4">
+        <section class="flex flex-col sm:flex-row w-11/12 mx-auto space-x-4">
 
             <!-- categories section -->
-            <div class="w-1/6">
-                <h3 class="text-xl font-bold mb-4">Categories</h3>
-                <div id="categories-container">                    
+            <div class="sm:w-1/6">
+                <h3 class="text-xl font-bold mb-4 text-center md:text-left">Categories</h3>
+                <div id="categories-container" class="flex sm:block flex-wrap sm:flex-nowrap text-center sm:text-left">                    
                 </div>
             </div>
 
 
             <!-- all trees card section -->
-            <div id="all-trees-card-container" class="w-4/6  grid grid-cols-3 gap-4" >                
+            <div id="all-trees-card-container" class="sm:w-4/6  md:grid grid-cols-3 gap-4 space-y-4 sm:space-y-0 " >                
             </div>
 
 
             <!-- trees card section -->
-            <div id="trees-card-container" class="w-4/6 grid grid-cols-3 gap-4 hidden" >
-                <!-- <div class="bg-white p-4 rounded-xl space-y-2">
-                    <img src="./assets/" alt="" class="rounded-xl">
-                    <div class="w-11/12 h-[120px] bg-gray-300 rounded-xl"></div>
-                    <h1 class="text-lg font-bold">Mango Tree</h1>
-                    <p class="text-xs">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
-                    <div class="flex justify-between items-center">
-                        <button class="p-1 px-3 text-xs text-[#15803D] bg-[#DCFCE7] rounded-3xl">Fruit Trees</button>
-                        <p class="text-sm font-bold">৳500</p>
-                    </div>
-                    <button class="p-1 bg-[#15803D] text-sm text-white rounded-3xl w-full">Add to Cart</button>
-                </div>                 -->
+            <div id="trees-card-container" class="sm:w-4/6 sm:grid grid-cols-3 gap-4 space-y-4 sm:space-y-0 hidden" >
             </div>
 
 
             <!-- your cart section -->
-            <div class="w-1/6 bg-white rounded-xl">
+            <div class="sm:w-1/6 bg-white rounded-xl">
                 <h3 class="text-xl font-bold mb-4 pt-1 p-4">Your Cart</h3>                
                 <div id="your-cart-container">
 
                 </div>
             </div>
         </section>
+
+        <!-- About the campaign section -->
+        <div class="w-11/12 mx-auto mt-20">
+            <h1 class="text-center text-3xl my-6 font-bold">About the Campaign</h1>
+            <div class=" w-11/12 sm:w-4/6 mx-auto flex flex-col sm:flex-row justify-center items-center gap-6">
+                <img src="./assets/about.png" alt="" class="sm:w-1/2 w-full rounded-xl">
+                <div class="text-sm space-y-6">
+                    <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
+                    <ul class="list-disc ml-6">
+                        <li>Restoration of natural habitats</li>
+                        <li>Improvement of air quality</li>
+                        <li>Support for local communities</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
     </main>
 
 
@@ -119,8 +128,8 @@
     <!-- Our Impact Section -->
     <section class="mx-auto text-center bg-[#CFF0DC]">
         <div class="w-11/12 mx-auto py-10">
-            <h1 class="text-2xl font-semibold mb-4">Our Impact</h1>
-            <div class="grid grid-cols-3 gap-6">
+            <h1 class="text-2xl font-bold mb-4">Our Impact</h1>
+            <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
                 <div class="bg-white py-5 rounded-2xl">
                     <h2 class="text-2xl font-bold text-[#15803D] mb-2">500K+</h2>
                     <p>Trees Planted</p>
