bug fix in responsive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- header section banner -->
          <section class="bg-[#CFF0DC] flex justify-around items-center">
-            <div class="w-11/12 mx-auto my-4 sm:mt-0 flex justify-around items-center">
+            <div class="w-11/12 mx-auto my-4 sm:my-0 flex justify-around items-center">
                 <div>
                 <img src="./assets/hero-leaf1.png" alt="" class="hidden sm:block">
                 </div>
@@ -84,17 +84,17 @@
 
 
             <!-- all trees card section -->
-            <div id="all-trees-card-container" class="sm:w-4/6  md:grid grid-cols-3 gap-4 space-y-4 sm:space-y-0 " >                
+            <div id="all-trees-card-container" class="sm:w-4/6  md:grid sm:grid-cols-3 gap-4 space-y-4 sm:space-y-0" >                
             </div>
 
 
             <!-- trees card section -->
-            <div id="trees-card-container" class="sm:w-4/6 sm:grid grid-cols-3 gap-4 space-y-4 sm:space-y-0 hidden" >
+            <div id="trees-card-container" class="hidden sm:w-4/6 grid sm:grid-cols-3 gap-4 space-y-4 sm:space-y-0" >
             </div>
 
 
             <!-- your cart section -->
-            <div class="sm:w-1/6 bg-white rounded-xl">
+            <div class="sm:w-1/6 mt-4 sm:mt-0 bg-white rounded-xl">
                 <h3 class="text-xl font-bold mb-4 pt-1 p-4">Your Cart</h3>                
                 <div id="your-cart-container">
 
