Answer the question

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
             <!-- all trees card section -->
-            <div id="all-trees-card-container" class="sm:w-4/6  md:grid sm:grid-cols-3 gap-4 space-y-4 sm:space-y-0" >                
+            <div id="all-trees-card-container" class="sm:w-4/6  grid sm:grid-cols-3 gap-4 space-y-4 sm:space-y-0" >                
             </div>
 
 
